testdata/baselines/reference/submodule/conformance/await_unaryExpression_es6_3.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
error TS2552: Cannot find name 'Number'. Did you mean 'number'?
error TS2552: Cannot find name 'Object'. Did you mean 'object'?
await_unaryExpression_es6_3.ts(2,7): error TS1109: Expression expected.
await_unaryExpression_es6_3.ts(6,7): error TS1109: Expression expected.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
!!! error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
!!! error TS2552: Cannot find name 'Number'. Did you mean 'number'?
!!! error TS2552: Cannot find name 'Object'. Did you mean 'object'?
==== await_unaryExpression_es6_3.ts (2 errors) ====
    async function bar1() {
        ++await 42; // Error
          ~~~~~
!!! error TS1109: Expression expected.
    }
    
    async function bar2() {
        --await 42; // Error
          ~~~~~
!!! error TS1109: Expression expected.
    }
    
    async function bar3() {
        var x = 42;
        await x++; // OK but shouldn't need parenthesis
    }
    
    async function bar4() {
        var x = 42;
        await x--; // OK but shouldn't need parenthesis
    }